[package]
name = "leptos_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.0-rc2", features = ["nightly"] }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"

[features]
three = []